Inclución de lógica para dashboards y modificaciones

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -145,10 +145,10 @@
                     </a>
                     <div class="collapse" id="form-elements">
                         <ul class="nav flex-column sub-menu">
-                            <li class="nav-item"><a class="nav-link" href="modifications/create_modification.html">Create</a>
+                            <li class="nav-item"><a class="nav-link" href="/modifications/create/">Create</a>
                             </li>
                             <li class="nav-item"><a class="nav-link"
-                                                    href="modifications/consult_modification.html">Consult</a></li>
+                                                    href="/modifications/consult/">Consult</a></li>
                         </ul>
                     </div>
                 </li>
