Corrección en lógica donde se valida la existencia del aprendiz al momento de crear o editar un registro de modificación

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -31,6 +31,9 @@
 
 <div class="container-scroller">
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+
+
     {{#if isWithInterface}}
 
     <!-- partial:partials/_navbar.html -->
@@ -309,6 +312,7 @@
 <script src="/js/dashboard.js"></script>
 <script src="/js/Chart.roundedBarCharts.js"></script>
 <!-- End custom js for this page-->
+
 </body>
 
 </html>
