--- a/views/modifications_consult.hbs
+++ b/views/modifications_consult.hbs
@@ -61,7 +61,7 @@
                         <tr>
                             <td><input type="checkbox" class="checkthis" /></td>
                             <td>{{mod_type_modification}}</td>
-                            <td>{{mod_apprentice_id}}</td>
+                            <td>{{app_identification}}</td>
                             <td>{{mod_date_start}}</td>
                             <td>{{mod_date_end}}</td>
                             <td>{{mod_count_day}}</td>
