--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -32,7 +32,7 @@
                                 <label class="col-sm-4 col-form-label">Password</label>
                                 <div class="col-sm-8">
                                     <input type="password" class="form-control" placeholder="Password" id="password" name="password" 
-                                        value="********" required />
+                                        value="{{user.use_password}}" required />
                                 </div>
                                 <div class="invalid-feedback">
                                     Please provide a valid city.
