--- a/views/apprentices_consult.hbs
+++ b/views/apprentices_consult.hbs
@@ -7,20 +7,23 @@
     <div class="col-md-20">
         <h4>Consult Apprentices</h4>
 
+        <br>
 
         <div class="container">
             <div class="row">
-                <div class="col-7"></div>
-                <div class="col-5 ">
+                <div class="col-1"></div>
+                <div class="col-6">
                     <div class="container">
                         <button type="button" class="btn btn-success btn-icon-text"
                             onclick="window.location.href='/apprentices/create/'">
                             <i class="fa-solid fa-plus"></i> Create New Record
                         </button>
+                        {{#if hasDowloadRecordPermition}}
                         <button type="button" class="btn btn-warning btn-icon-text">
                             <i class="fa-solid fa-download"></i>
                             Download Records
                         </button>
+                        {{/if}}
                     </div>
                 </div>
             </div>
@@ -30,20 +33,8 @@
 
         <div class="container">
             <div class="row">
-
-                <div class="col-8">
-                    {{!-- <div class="row">
-                        <p>Show &nbsp</p>
-                        <select style="height: 20px;">
-                            <option>10</option>
-                            <option>50</option>
-                            <option>100</option>
-                        </select>
-                        <p>&nbsprecords</p>
-                    </div> --}}
-                </div>
-
-                <div class="col-3 ">
+                <div class="col-1"></div>
+                <div class="col-3">
                     <div class="input-group rounded">
                         <input type="search" class="form-control rounded" placeholder="Search 🔍" aria-label="Search"
                             aria-describedby="search-addon" />
@@ -95,15 +86,16 @@
                             <td>{{app_productive_end_date}}</td>
                             <td>{{app_count_days}}</td>
                             <td>
-                                <p data-placement="top" data-toggle="tooltip" title="Edit"><button onclick="window.location.href='/apprentices/edit/{{app_id}}/'"
+                                <p data-placement="top" data-toggle="tooltip" title="Edit"><button
+                                        onclick="window.location.href='/apprentices/edit/{{app_id}}/'"
                                         class="btn btn-primary btn-xs" data-title="Edit" data-toggle="modal"
                                         data-target="#edit"><span><i class="fa-solid fa-pen-clip"></i></span></button>
                                 </p>
                             </td>
                             <td>
-                                <p data-placement="top" data-toggle="tooltip" title="Delete"><button onclick="deleteRecord({{app_id}})"
-                                        class="btn btn-danger btn-xs" data-title="Delete" data-toggle="modal"
-                                        data-target="#delete"><span><i
+                                <p data-placement="top" data-toggle="tooltip" title="Delete"><button
+                                        onclick="deleteRecord({{app_id}})" class="btn btn-danger btn-xs"
+                                        data-title="Delete" data-toggle="modal" data-target="#delete"><span><i
                                                 class="fa-solid fa-trash-can"></i></span></button></p>
                             </td>
                         </tr>
@@ -154,11 +146,11 @@
 
             xhr.send();
 
-            setTimeout(function(){
+            setTimeout(function () {
                 location.reload()
             }, 1000);
-            
-        }       
-        
+
+        }
+
     }
 </script>
