--- a/views/modifications_consult.hbs
+++ b/views/modifications_consult.hbs
@@ -4,19 +4,22 @@
 <div class="container">
     <div class="col-md-20">
         <h4>Consult Modifications</h4>
+        <br>
         <div class="container">
             <div class="row">
-                <div class="col-7"></div>
+                <div class="col-1"></div>
                 <div class="col-5 ">
                     <div class="container">
                         <button type="button" class="btn btn-success btn-icon-text"
                             onclick="window.location.href='/modifications/create/'">
                             <i class="fa-solid fa-plus"></i> Create New Record
                         </button>
+                        {{#if hasDowloadRecordPermition}}
                         <button type="button" class="btn btn-warning btn-icon-text">
                             <i class="fa-solid fa-download"></i>
                             Download Records
                         </button>
+                        {{/if}}
                     </div>
                 </div>
             </div>
@@ -27,7 +30,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-8">
+                <div class="col-1">
                 </div>
 
                 <div class="col-3 ">
