Ajuste a labels escritos en español

--- a/views/modifications_consult.hbs
+++ b/views/modifications_consult.hbs
@@ -51,11 +51,11 @@
                     <thead>
 
                         <th><input type="checkbox" id="checkall" /></th>
-                        <th>Tipo de Modificación</th>
-                        <th>Numero de Identificación Aprendiz</th>
-                        <th>Fecha de Inicio</th>
-                        <th>Fecha de Finalización</th>
-                        <th>Cantidad de Días</th>
+                        <th>Modificaion Type</th>
+                        <th>Number Identification of Apprentice</th>
+                        <th>Date Init</th>
+                        <th>Date End</th>
+                        <th>Count Days</th>
                         <th>Edit</th>
                         <th>Delete</th>
                     </thead>
