--- a/views/modifications_create.hbs
+++ b/views/modifications_create.hbs
@@ -13,7 +13,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Tipo Modificación</label>
+                            <label class="col-sm-3 col-form-label">Modification Type</label>
                             <div class="col-sm-9">
                                 <select class="form-control" id="typeModification" name="typeModification">
                                     {{#each listOptionsTypeModification}}
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Número de Docuemento del Aprendiz</label>
+                            <label class="col-sm-3 col-form-label">Number Identification of Apprentice</label>
                             <div class="col-sm-9">
                                 <input type="number" class="form-control" placeholder="Document ID" name="documentId"
                                        id="documentId" required />
@@ -36,7 +36,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Fecha de Inicio</label>
+                            <label class="col-sm-3 col-form-label">Date Init</label>
                             <div class="col-sm-9">
                                 <input type="date" class="form-control" placeholder="mm/dd/yyyy" id="dateStart" name="dateStart" />
                             </div>
@@ -44,7 +44,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Fecha de Finalización</label>
+                            <label class="col-sm-3 col-form-label">Date End</label>
                             <div class="col-sm-9">
                                 <input type="date" class="form-control" placeholder="Number" id="dateEnd" name="dateEnd" onchange="calcularDias()" />
                             </div>
@@ -54,7 +54,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group row">
-                            <label class="col-sm-3 col-form-label">Cantidad de Días</label>
+                            <label class="col-sm-3 col-form-label">Count Days</label>
                             <div class="col-sm-9">
                                 <input type="number" class="form-control" placeholder="Count Days" name="countDays" id="countDays" />
                             </div>
