--- a/views/apprentices_consult.hbs
+++ b/views/apprentices_consult.hbs
@@ -19,10 +19,12 @@
                             <i class="fa-solid fa-plus"></i> Create New Record
                         </button>
                         {{#if hasDowloadRecordPermition}}
-                        <button type="button" class="btn btn-warning btn-icon-text">
-                            <i class="fa-solid fa-download"></i>
-                            Download Records
-                        </button>
+                        <a href="/apprentices/dowload" download="report_apprentices.xlsx">
+                            <button type="button" class="btn btn-warning btn-icon-text" >
+                                <i class="fa-solid fa-download"></i>
+                                Download Records
+                            </button>
+                        </a>
                         {{/if}}
                     </div>
                 </div>
