--- a/views/users_consult.hbs
+++ b/views/users_consult.hbs
@@ -131,7 +131,7 @@
         var result = confirm('Are you sure you want to delete this record?');
 
         if (result) {
-            var url = "http://localhost:80/users/delete/" + idUser;
+            var url = "/users/delete/" + idUser;
 
             var xhr = new XMLHttpRequest();
             xhr.open("POST", url);
