Inclución de 1 segundo de espera al momento de hacer la eliminación de un usuario por demoras en la base de datos productiva

--- a/views/users_consult.hbs
+++ b/views/users_consult.hbs
@@ -141,7 +141,10 @@
 
             xhr.send();
 
-            location.reload()
+            setTimeout(() => {
+                location.reload()
+            },1000)
+            
         }
 
     }
