--- a/views/apprentices_consult.hbs
+++ b/views/apprentices_consult.hbs
@@ -138,7 +138,7 @@
         var result = confirm('Are you sure you want to delete this record?');
 
         if (result) {
-            var url = "http://localhost:80/apprentices/delete/" + idApprentice;
+            var url = "/apprentices/delete/" + idApprentice;
 
             var xhr = new XMLHttpRequest();
             xhr.open("POST", url);
